fixed modal layout on mobile

--- a/assets/scss/partials/_media.scss
+++ b/assets/scss/partials/_media.scss
@@ -12,5 +12,9 @@
 
 	.modal-container {
 		width: 100%;
+
+		.container {
+			width: 90%;
+		}
 	}
 }
