--- a/assets/scss/partials/_modal.scss
+++ b/assets/scss/partials/_modal.scss
@@ -2,14 +2,15 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 100vh;
 	width: 100vw;
+	height: auto;
 	z-index: 10;
 	background: rgba(0,0,0,0.2);
 
 	.modal-container {
 		width: 100%;
 		height: 100%;
+		overflow-y: scroll;
 		background: rgba(255, 255, 255, 0.9);
 		//padding: 20px 0 20px 0;
 
