--- a/assets/scss/partials/_reset.scss
+++ b/assets/scss/partials/_reset.scss
@@ -39,6 +39,10 @@ body {
 	justify-content: center;
 }
 
+.text-center {
+	text-align: center;
+}
+
 // Button and link styles
 
 button, input, textarea, a {
